[package]
name = "id-set"
description = "A bitset implementation that stores data on the stack for small sizes."
documentation = "https://docs.rs/id-set/"
repository = "https://github.com/andrewhickman/id-set"
license = "MIT/Apache-2.0"
version = "0.2.2"
keywords = ["data-structures", "bitset"]
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]